# ansi-three

./: .gitignore  Cargo.toml  ansi.hexproj  ansi.imhex.pat
colorful/: Cargo.toml  build.rs
colorful/src/: bluenoise.rs  lib.rs  palette.rs  pattern_dithering.rs
container/: Cargo.toml  streams.asn1
container/src/: lib.rs  metadata.rs  seek.rs  side_data.rs
encoder/: Cargo.toml
encoder/src/: lib.rs  main.rs
encoder/src/encoders/: lz4.rs  mod.rs  subtitles.rs  video.rs  zstd.rs
encoder/src/ff/: decoder.rs  mod.rs  packet.rs  subtitles.rs
img2ansi/: Cargo.toml  test.pnm
img2ansi/src/: lib.rs
player/: Cargo.toml
player/src/: lib.rs  main.rs  processors.rs  renderer.rs
