[package]
name = "container"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
arrayvec = "0.7.6"
binrw = "0.14.1"
byteorder = "1.5.0"
bytes = "1.10.1"
integer-encoding = "4.0.2"
litemap = "0.8.0"
rasn = { version = "0.27.0", features = ["std"] }
typed-builder = "0.21.0"

[dev-dependencies]
tinyrand = "0.5.0"
