[package]
name = "encoder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
binrw = "0.14.1"
ffmpeg-the-third = { git = "https://github.com/kore-signet/ffmpeg-the-third", features = [
    # "build",
    # "static",
    # "build-license-nonfree",
    # "build-license-gpl",
    # "build-license-version3",
    # "build-pic",
    # "build-zlib",
] }
thingbuf = "0.1.6"
container = { path = "../container" }
image = { version = "0.25.6", default-features = false }
img2ansi = { path = "../img2ansi" }
colorful = { path = "../colorful" }
bytes = "1.10.1"
spin_sleep = "1.3.1"
ssa = { git = "https://github.com/kore-signet/advanced-substation", rev = "2646c9ce43452e047a2741dfb9db9f6d55496936" }
textwrap = "0.16.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
stable-vec = "0.4.1"
zstd = "0.13.3"
tempfile = "3.19.1"
clap = { version = "4.5.40", features = ["derive"] }
rasn = { version = "0.27.0", features = ["std"] }
tsz-compress = { version = "1.1.6", features = ["std"] }
byteorder = "1.5.0"
lz4_flex = "0.11.5"
arrayvec = "0.7.6"
litemap = "0.8.0"

