[package]
name = "img2ansi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
bytes = "1.10.1"
colorful = { path = "../colorful" }
container = { path = "../container" }
image = { version = "0.25.6", default-features = false, features = ["png"] }
itoa = { version = "1.0.15" }

[build-dependencies]
