[package]
name = "player"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
byteorder = "1.5.0"
clap = { version = "4.5.40", features = ["derive"] }
container = { version = "0.1.0", path = "../container" }
crossterm = "0.29.0"
humansize = "2.1.3"
litemap = "0.8.0"
lz4_flex = "0.11.5"
parking_lot = "0.12.4"
parse-size = { version = "1.1.0", features = ["std"] }
rasn = { version = "0.27.0", features = ["std"] }
spin_sleep = "1.3.2"
stable-vec = "0.4.1"
termion = "4.0.5"
thingbuf = "0.1.6"
tsz-compress = { version = "1.1.6", features = ["std"] }
zstd = { version = "0.13.3", features = ["zdict_builder"] }
